[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Entities/Character/Portrait/PhotoCropper.gd" type="Script" id=1]
[ext_resource path="res://src/Entities/Character/Portrait/Westly_Willows.PNG" type="Texture" id=2]
[ext_resource path="res://src/Entities/Character/Portrait/CropBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/CharacterCreation/DefaultFont.tres" type="DynamicFont" id=4]




[node name="PhotoCropper" type="PopupPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -430.5
margin_top = -201.0
margin_right = 430.5
margin_bottom = 201.0
popup_exclusive = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 853.0
margin_bottom = 328.0
mouse_filter = 2
size_flags_vertical = 3

[node name="SelectedPhoto" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_right = 424.0
margin_bottom = 328.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 6

[node name="CropBox" parent="VBoxContainer/HBoxContainer/SelectedPhoto" instance=ExtResource( 3 )]
margin_right = 210.0

[node name="PreviewPhoto" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 428.0
margin_right = 853.0
margin_bottom = 328.0
size_flags_horizontal = 3
stretch_mode = 6

[node name="Instructions" type="Label" parent="VBoxContainer"]
margin_top = 332.0
margin_right = 853.0
margin_bottom = 364.0
size_flags_vertical = 7
size_flags_stretch_ratio = 0.1
custom_fonts/font = ExtResource( 4 )
text = "Position the rectangle over the space you want your protrait to be."
align = 1
valign = 1
autowrap = true

[node name="Button" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 368.0
margin_right = 853.0
margin_bottom = 393.0

[node name="Create" type="Button" parent="VBoxContainer/Button"]
margin_left = 138.0
margin_right = 286.0
margin_bottom = 25.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 4 )
text = "Create Portrait"

[node name="Cancel" type="Button" parent="VBoxContainer/Button"]
margin_left = 607.0
margin_right = 673.0
margin_bottom = 25.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 4 )
text = "Cancel"

[node name="UpdateTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.05
autostart = true
